src/objects/QPMS__FiveWhyTemplate__c.object
<CustomObject>
    <description>FiveWhyTemplate</description>
    <fields>
        <fullName>QPMS__Answer__c</fullName>
        <description>Answer</description>
        <label>Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__FiveWhy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup field.</description>
        <label>FiveWhy</label>
        <referenceTo>QPMS__FiveWhy__c</referenceTo>
        <relationshipLabel>FiveWhyTemplates</relationshipLabel>
        <relationshipName>FiveWhyTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__General_Task__c</fullName>
        <formula>CASESAFEID(QPMS__FiveWhy__r.QPMS__General_Task__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>General Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__How__c</fullName>
        <formula>QPMS__FiveWhy__r.QPMS__How__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>How</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__NonConformance_Id__c</fullName>
        <formula>QPMS__FiveWhy__r.QPMS__NonConformance_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NonConformance Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__RecordType_Name__c</fullName>
        <description>Record type name</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType Name</label>
        <type>Text</type>
    </fields>
    <label>FiveWhyTemplate</label>
    <nameField>
        <displayFormat>FWT-{00000}</displayFormat>
        <label>FiveWhyTemplate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FiveWhyTemplates</pluralLabel>
    <recordTypes>
        <fullName>QPMS__How</fullName>
        <active>true</active>
        <description>How</description>
        <label>How</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Why</fullName>
        <active>true</active>
        <description>Why</description>
        <label>Why</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>